made hamburger position fixed on the screen so it is always visible even when scrolling down

--- a/style.css
+++ b/style.css
@@ -165,8 +165,7 @@ header{
 
 .logo{
     margin-top: -8.5em;
-    max-width: 300px;
-    
+    max-width: 300px;    
 }
 
 
@@ -244,7 +243,9 @@ header{
 
 .hamburger{
     display: block;
-    position: relative;
+    position: fixed;
+    top: 25px;
+    right: 10px;
 }
 
 .hamburger,
